# covid-boosters

./: .gitignore  README.md  Snakefile  base.py  example.ipynb  individual_susceptibility_model.ipynb  optimising_vaccination.ipynb  outbreak_risk.ipynb  population_susceptibility_model.ipynb  pyproject.toml  ruff.toml  susceptibility_model.ipynb  vaccination_example.ipynb  without_vaccination.ipynb
conda_env/: build_venv.sh  environment.yml
covidboosters/: __init__.py  base.py
data/: 12HCWs_NLMEM_parameters.csv  12_HCWs_parameters.csv  1618_FukushimaVaccineCohort_parameters.csv  1618_FukushimaVaccineCohorts_NLSM_parameters.csv
notebooks/: individual_susceptibility_model.ipynb  optimising_vaccination.ipynb  population_susceptibility_model.ipynb  vaccination_example.ipynb  without_vaccination.ipynb
results/: antibody_model_params.csv  antibody_model_params_pop.csv  antibody_model_params_random_effects.csv  susceptibility_all_0 copy.csv  susceptibility_all_0.csv  vaccination_example.csv  within_host_dynamics.csv  within_host_example.csv  without_vaccination_methods.csv
results/optimizing_vaccination/: best.csv  (+2 more)
scripts/: default_parameters.py  format_antibody_model_param_estimates.py  format_parameter_estimates.py  manuscript_example_results.py  optimizing_vaccination.py  sensitivity_k.py  sensitivity_obj_func.py  sensitivity_prop_vacc.py  sensitivity_r0_mean.py  sensitivity_r0_var.py  sensitivity_unvacc_r.py  sensitivity_vacc_effect.py  simulation_examples.py  vaccination_example.py  within_host_dynamics.py  within_host_example.py  without_vaccination.py
(+152 files in other folders)
