[project]
name = "covidboosters"
requires-python = ">=3.12,<3.13"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
numpy = "2.2.*"
scipy = "1.15.*"
matplotlib = "3.10.*"
seaborn = "0.13.*"
pandas = "2.2.*"
joblib = "1.4.*"
tqdm = "4.67.*"
cftime = "1.6.*"
svgutils = "0.3.*"
snakemake = "8.29.*"

[tool.pixi.feature.dev.dependencies]
ruff = "0.9.*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }
prod = { features = [], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
